# hermes-community-skills

./: README.md  SBOM.json  pyproject.toml
skills/baoyu-comic/: SKILL.md
skills/browseros-mcp-control/: SKILL.md
skills/browseros-music-playback-routing/: SKILL.md
skills/browseros-music-playback-routing/references/: browseros-music-playback-routing-session-notes.md  session-lessons-2026-06-07.md  youtube-channel-latest-video-routing-2026-06-07.md  youtube-music-routing-notes.md  youtube-visible-playback-ptbr-maximized-2026-06-09.md
skills/browseros-research-extraction/: SKILL.md
skills/community-skills/: SKILL.md
skills/github-pr-gate/: SKILL.md
skills/github-pr-workflow/: SKILL.md
skills/github-pr-workflow/references/: docs-only-runtime-registration.md  token-probe-401-2026-05.md
skills/mcp-core-usage/: SKILL.md
src/hermes_community_skills/: __init__.py  config.py  plugin.py
tests/: test_smoke.py
